Add basic functionality to configure the module to include the iframe resizer library javascript files.

--- a/iframe_resizer.info.yml
+++ b/iframe_resizer.info.yml
@@ -3,3 +3,4 @@ type: module
 description: Provides access to the iFrame Resizer javascript library
 core: 8.x
 package: Other
+configure: iframe_resizer.settings
