Give admins the ability to set body background and autoresize options.

--- a/config/install/iframe_resizer.settings.yml
+++ b/config/install/iframe_resizer.settings.yml
@@ -10,3 +10,5 @@ iframe_resizer_advanced:
     log: 0
     height_calculation_method: bodyOffset
     width_calculation_method: scroll
+    autoresize: 1
+    body_background: ''
