Add ability to set targetOption option for when the site is hosted within an iframe.

--- a/config/install/iframe_resizer.settings.yml
+++ b/config/install/iframe_resizer.settings.yml
@@ -24,3 +24,6 @@ iframe_resizer_advanced:
     sizeHeight: TRUE
     sizeWidth: FALSE
     tolerance: 0
+
+iframe_resizer_advanced_hosted_options:
+    targetOrigin: '*'
