Add ability to override the parent page's height calculation option when the site is hosted within an iframe.

--- a/config/install/iframe_resizer.settings.yml
+++ b/config/install/iframe_resizer.settings.yml
@@ -27,3 +27,4 @@ iframe_resizer_advanced:
 
 iframe_resizer_advanced_hosted_options:
     targetOrigin: '*'
+    heightCalculationMethodOverride: 'parent'
