Add ability to override the parent page's width calculation option when the site is hosted within an iframe.

--- a/config/install/iframe_resizer.settings.yml
+++ b/config/install/iframe_resizer.settings.yml
@@ -28,3 +28,4 @@ iframe_resizer_advanced:
 iframe_resizer_advanced_hosted_options:
     targetOrigin: '*'
     heightCalculationMethodOverride: 'parent'
+    widthCalculationMethodOverride: 'parent'
