--- a/config/install/iframe_resizer.settings.yml
+++ b/config/install/iframe_resizer.settings.yml
@@ -27,5 +27,5 @@ iframe_resizer_advanced:
 
 iframe_resizer_advanced_hosted_options:
     targetOrigin: '*'
-    heightCalculationMethodOverride: 'parent'
-    widthCalculationMethodOverride: 'parent'
+    heightCalculationMethod: 'parent'
+    widthCalculationMethod: 'parent'
